<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_animation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_animation2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_animation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_animation2_with_xml"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_animation1" />

    <TextView
        android:id="@+id/tv_animation2_with_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation2_with_xml"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_animation3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_animation2" />

    <TextView
        android:id="@+id/tv_animation3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_animation3_with_xml"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_animation2_with_xml" />

    <TextView
        android:id="@+id/tv_animation3_with_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation_with_xml"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_animation4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_animation3" />

    <TextView
        android:id="@+id/tv_animation4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_animation4_with_xml"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_animation3_with_xml" />

    <TextView
        android:id="@+id/tv_animation4_with_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_animation_4_with_xml"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_animation4" />
</androidx.constraintlayout.widget.ConstraintLayout>
